Bug/40 No class def found error (#41)
* #40: NoClassDefFoundError when used without exasol-test-setup-abstraction-java