@@ -5,7 +5,6 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.mockito.Mockito.*;
 
 import java.sql.*;
-import java.util.Arrays;
 import java.util.List;
 
 import org.itsallcode.junit.sysextensions.SystemOutGuard;
@@ -17,6 +16,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import com.exasol.bucketfs.Bucket;
+import com.exasol.exasoltestsetup.ExasolTestSetup;
+import com.exasol.exasoltestsetup.ServiceAddress;
 
 @ExtendWith(MockitoExtension.class)
 @ExtendWith(SystemOutGuard.class)
@@ -39,7 +40,7 @@ class UdfTestSetupTest {
     void testDebuggingEnabled() {
         System.setProperty(DEBUG_PROPERTY, "true");
         try (final UdfTestSetup udfTestSetup = getUdfTestSetup()) {
-            final List<String> jvmOptions = Arrays.asList(udfTestSetup.getJvmOptions());
+            final List<String> jvmOptions = List.of(udfTestSetup.getJvmOptions());
             assertThat(jvmOptions, hasItem(EXPECTED_DEBUG_JVM_OPTION));
         }
     }
@@ -49,10 +50,25 @@ class UdfTestSetupTest {
     }
 
     @Test
+    void testGetTestSetupForETAJ() {
+        System.setProperty(COVERAGE_PROPERTY, "true");
+        final ExasolTestSetup testSetup = mock(ExasolTestSetup.class);
+        final Bucket bucket = mock(Bucket.class);
+        when(testSetup.getDefaultBucket()).thenReturn(bucket);
+        when(testSetup.makeLocalTcpServiceAccessibleFromDatabase(anyInt()))
+                .thenReturn(new ServiceAddress("4.3.2.1", 123));
+        try (final UdfTestSetup udfTestSetup = new UdfTestSetup(testSetup, this.connection)) {
+            final List<String> jvmOptions = List.of(udfTestSetup.getJvmOptions());
+            assertThat(jvmOptions, hasItem(
+                    "-javaagent:/buckets/null/null/org.jacoco.agent-runtime.jar=output=tcpclient,address=4.3.2.1,port=123"));
+        }
+    }
+
+    @Test
     void testCoverageEnabled() {
         System.setProperty(COVERAGE_PROPERTY, "true");
         try (final UdfTestSetup udfTestSetup = getUdfTestSetup()) {
-            final List<String> jvmOptions = Arrays.asList(udfTestSetup.getJvmOptions());
+            final List<String> jvmOptions = List.of(udfTestSetup.getJvmOptions());
             assertThat(jvmOptions, hasItem(
                     "-javaagent:/buckets/null/null/org.jacoco.agent-runtime.jar=output=tcpclient,address=1.2.3.4,port=3002"));
         }
@@ -72,7 +88,7 @@ class UdfTestSetupTest {
     @Test
     void testAllModulesAreDisabledByDefault() {
         try (final UdfTestSetup udfTestSetup = getUdfTestSetup()) {
-            final List<String> jvmOptions = Arrays.asList(udfTestSetup.getJvmOptions());
+            final List<String> jvmOptions = List.of(udfTestSetup.getJvmOptions());
             assertThat(jvmOptions.isEmpty(), equalTo(true));
         }
     }
@@ -81,7 +97,7 @@ class UdfTestSetupTest {
     void testDebuggingDisabled() {
         System.setProperty(DEBUG_PROPERTY, "false");
         try (final UdfTestSetup udfTestSetup = getUdfTestSetup()) {
-            final List<String> jvmOptions = Arrays.asList(udfTestSetup.getJvmOptions());
+            final List<String> jvmOptions = List.of(udfTestSetup.getJvmOptions());
             assertThat(jvmOptions, not(hasItem(EXPECTED_DEBUG_JVM_OPTION)));
         }
     }
